--- a/cw6-Graphics/Report/graphics.tex
+++ b/cw6-Graphics/Report/graphics.tex
@@ -126,8 +126,13 @@ such cases the most commonly used medium is a tablet. The big buttons have been 
 intended to be used with touch-screens that is friendly for children.
 Neutral grey colored pallete is chosen because of the nature of the slides that explain colour and their edge cases in black or
 white would seem too hard and might get devalued with other combinations of colours.
+\section{Troubleshooting}
+\indent\par
+lagging rendering hints, more lagging toolkit.sync()\\
+\\
 
 \section{Frameworks, Compiling and Running}
+\indent\par
 I started developing this project with a simple text editor and raw javac, as I did always before with java applications.
 When I saw that this would become a complex program and I would need some framework to keep everything tidy I started using gradle.
 I was happy with gradle until I found it impossible to compile including the opencv libraries. This problem made me turn to ant.
